[package]
name = "telemetry"
authors = ["Spire Labs"]
edition = "2024"
homepage = "https://www.spire.dev/"
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/spire-labs/telemetry"
version = "0.0.0"

[dependencies]
axum = { version = "0.7.9", features = ["macros"] }
eyre = "0.6.12"
futures-util = "0.3.31"
opentelemetry = "0.30.0"
opentelemetry-otlp = { version = "0.30.0", features = ["tonic", "grpc-tonic"] }
opentelemetry_sdk = "0.30.0"
opentelemetry-appender-tracing = "0.30.1"
rpc = { git = "https://github.com/spire-labs/rpc", tag = "v0.0.1" }
serde_json = "1.0.40"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tracing-opentelemetry = "0.31.0"
tower = "0.5.2"
tower-http = { version = "0.6.2", features = [
  "trace",
  "metrics",
  "request-id",
] }

[dev-dependencies]
tokio = "1.28.2"

[lib]
doctest = false
